--- a/account/templates/account/detail.html
+++ b/account/templates/account/detail.html
@@ -13,36 +13,37 @@
             {% trans 'Charakterübereinstimmung' %}: {{ score }}%
         </div>
     {% endif %}
+    {% if viewed_user.profile_text %}
+        <p class="info-p">
+            <i>
+                {{ viewed_user.profile_text }}
+            </i>
+        </p>
+    {% endif %}
     {% if friendship %}
-        
-        {% if viewed_user.profile_text %}
-            <p class="info-p">
-                <i>
-                    {{ viewed_user.profile_text }}
-                </i>
-            </p>
-        {% endif %}
         <div class="button-like" style="margin-top: 10px" onclick=openLink("{% url 'chat:chat_room' 'account' 'friendship' friendship.id %}")>
             <img src="{% static 'icons/chat.png' %}">
             {% trans "Zum Chat" %}
         </div>
-        
-        <p>{{ viewed_user.username }} {% trans "ist Mitglied folgender Aktivitäten" %}:</p>
-        {% include "activity/loop.html" with activities=viewed_user.activities own=user.activities.all %}
-        <div class="profile-rest">
-            <p>{% trans "Adresse" %}: {{ viewed_user.location.full_address }}</p>
-            <p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'account:destroy_friendship' viewed_user.id %}")>{% trans "Freundschaft beenden" %}</button></div></p>
-            {% else %}
-                <p class="info-p">{% blocktrans with user=viewed_user.username %}Sie sind nicht mit {{ user }} befreundet.{% endblocktrans %}
-                {% if requested %}
-                    <br><br>{% trans "Sie haben allerdings bereits eine Freundschaftsanfrage gesendet. Diese wurde entweder abgelehnt oder die Antwort steht noch aus" %}.</p>
-                {% else %}
-                    {% blocktrans with user=viewed_user.username %}Schicken Sie eine Freundschaftsanfrage, um zu sehen, welche Aktivitäten {{ user }} mag!{% endblocktrans %}
-                </p><p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'account:send_friend_request' viewed_user.id %}")>{% trans "Freundschaftsanfrage schicken" %}</button></div></p>
-                {% endif %}
-            {% endif %}
-            <h3>{% trans "Posts" %}</h3>
-            {% include 'wall/post/post_loop.html' %}
-        </div>
+    {% endif %}
+    <p>{{ viewed_user.username }} {% trans "ist Mitglied folgender Aktivitäten (gemeinsame <span style='color: yellow'>gelb</span>)" %}:</p>
+    {% include "activity/loop.html" with activities=viewed_user.activities own=user.activities.all %}
+    <div class="profile-rest">
+        <p>{% trans "Adresse" %}: {{ viewed_user.location.full_address }}</p>
+    {% if friendship %}
+        <p>
+        <div class="center-container"><button class="blue-button" onclick=openLink("{% url 'account:destroy_friendship' viewed_user.id %}")>{% trans "Freundschaft beenden" %}</button></div></p>
+    {% else %}
+        <p class="info-p">{% blocktrans with user=viewed_user.username %}Sie sind nicht mit {{ user }} befreundet.{% endblocktrans %}
+        {% if requested %}
+            <br><br>{% trans "Sie haben allerdings bereits eine Freundschaftsanfrage gesendet. Diese wurde entweder abgelehnt oder die Antwort steht noch aus" %}.</p>
+        {% else %}
+            {% blocktrans with user=viewed_user.username %}Schicken Sie eine Freundschaftsanfrage, um zu sehen, welche Aktivitäten {{ user }} mag!{% endblocktrans %}
+            </p><p><div class="center-container"><button class="blue-button" onclick=openLink("{% url 'account:send_friend_request' viewed_user.id %}")>{% trans "Freundschaftsanfrage schicken" %}</button></div></p>
+        {% endif %}
+    {% endif %}
+    <h3>{% trans "Posts" %}</h3>
+    {% include 'wall/post/post_loop.html' %}
+    </div>
 
 {% endblock %}
