--- a/account/templates/account/about.html
+++ b/account/templates/account/about.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1 class="h-img"><img src="{% static 'icons/hello.png' %}">{% trans "Willkommen!" %}</h1>
 <div class="info-p" style="margin: 0 5px">
-    {% blocktrans %}Hi! Haben Sie gerade nix zu tun und fragen sich, was Sie unternehmen könnten? Da kann Ihnen diese Seite vielleicht bei helfen! Nach der <a href="/account/register">kostenlosen Registrierung</a> können Sie hier Folgendes machen: {% endblocktrans %}
+    {% blocktrans %}Hallo!<ul><li>Sie wollen neue Musik hören, wissen aber nicht, welches Genre?</li><li>Sie würden gerne was am Wochenende unternehmen, wissen aber noch nicht, was?</li><li>Sie würden gerne ein Instrument lernen, sind sich aber nicht sicher, welches?</li></ul>Da kann Ihnen diese Seite vielleicht bei helfen! Nach der <a href="/account/register">kostenlosen Registrierung</a> können Sie hier Folgendes machen: {% endblocktrans %}
 </div>
 <div class="center-container">
 <p style="font-weight: bold;">{% trans "Ermitteln Sie Ihre Persönlichkeit in wenigen Minuten durch einfache Fragen!" %}</p>
