--- a/account/static/css/base4.css
+++ b/account/static/css/base4.css
@@ -123,6 +123,10 @@ a:hover {
     padding: 5px 5px;
 }
 
+.info-p ul {
+    text-align: left;
+}
+
 h1 img {
     height: 40px;
     margin-right: 5px;
@@ -665,6 +669,7 @@ form label {
     font-size: 16px;
     float: left;
     margin-left: 10px;
+    margin-bottom: 5px;
 }
 
 .errorlist {
