--- a/account/templates/account/people_list.html
+++ b/account/templates/account/people_list.html
@@ -22,20 +22,20 @@
     </div>
 </div>
 {% if not search_string %}
-    <p style="text-align: center">
+    <p style="text-align: center" id="people-list">
         {% trans "Mitglieder anzeigen" %}: <br/>
-        {% include 'activity/location_selection.html' %}
+        {% include 'activity/location_selection.html' with id='people-list' %}
     </p>
 {% endif %}
 <div class="search-bar">
-    {% trans 'Suche nach Nutzername: ' %}
+    {% trans 'Nutzername: ' %}
     <input type="search" id="search-input" class="search-input" name="activity-search" value="{{ search_string|default_if_none:'' }}">
     <img src="{% static '/icons/search.png' %}" onclick=search() height="25px" style="margin-left: 5px; cursor: pointer">
     <script>
         {% include 'javascript/search.js' %}
     </script>
 </div>
-{% include "account/pagination.html" with page=people %}
+{% include "account/pagination.html" with page=people id='people-list' %}
 {% if method == 'congruence' %}
     <div class="list">
         {% for user, score in people %}
