--- a/account/templates/account/friend_requests_list.html
+++ b/account/templates/account/friend_requests_list.html
@@ -18,7 +18,7 @@
             {% trans 'Anfrage senden' %}
         </div>
         <div class="right" onclick=openLink("{% url 'account:people_list' %}")>
-            <img src="{% static 'icons/question.png' %}">{% blocktrans %}In Ihrer Nähe suchen{% endblocktrans %}
+            <img src="{% static 'icons/search.png' %}">{% blocktrans %}In Ihrer Nähe suchen{% endblocktrans %}
         </div>
     </div>
     
