--- a/character/templates/character/overview.html
+++ b/character/templates/character/overview.html
@@ -17,7 +17,7 @@
             {% trans 'Zum Fragebogen' %}
         </div>
     {% else %}
-        <div class="button-like" style="margin-top: 10px" onclick=openLink("{% url 'account:people_list' %}")><img src="{% static 'icons/friendship.png' %}">{% blocktrans %}Freunde in Ihrer Nähe finden{% endblocktrans %}</div>
+        <div class="button-like" style="margin-top: 10px" onclick=openLink("{% url 'account:people_list' %}")><img src="{% static 'icons/search.png' %}">{% blocktrans %}Freunde in Ihrer Nähe finden{% endblocktrans %}</div>
     {% endif %}
 {% else %}
     <div class="info-p">
