--- a/account/templates/registration/register.html
+++ b/account/templates/registration/register.html
@@ -15,7 +15,7 @@
         
         <p class="info-p">
             <strong>{% trans "Willkommen bei myactivities.net! :)" %}</strong><br><br>
-            {% trans "Bitte nutzen Sie das folgende Formular zum Registrieren:" %}
+            {% trans "Finden Sie Hobbys und neue Freunde! Am besten geht das, wenn Sie auch Geschlecht und Alter angeben. Ihre E-Mail-Adresse wird ausschließlich für den Aktivierungslink und die Passwort-Zurücksetzung verwendet!" %}
         </p>
             <form class="login-form" method="post">
                 {{ user_form.as_p }}
