--- a/account/templates/account/delete.html
+++ b/account/templates/account/delete.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <h1 class="h-img"><img src="{% static 'icons/remove.png' %}">{% trans 'Account löschen' %}</h1>
-<p class="info-p">{% trans 'Klicken Sie auf den Button, um Ihren Account zu löschen.<br>Alle zu Ihrem Account gehörigen Daten, inklusive aller Posts, Kommentare und Chateinträge, werden dadurch gelöscht. Sie werden automatisch aus allen Gruppen entfernt. Das Ergebnis Ihres Persönlichkeitstests, falls vorhanden, bleibt zur Normierung vorhanden, wird aber anonymisiert (kann also nicht mehr mit Ihnen in Verbindung gebracht werden).' %}</p>
+<p class="info-p">{% trans 'Klicken Sie auf den Button, um Ihren Account zu löschen.<br>Alle zu Ihrem Account gehörigen Daten, inklusive aller Posts und Kommentare, werden dadurch gelöscht. Sie werden automatisch aus allen Gruppen entfernt. Das Ergebnis Ihres Persönlichkeitstests, falls vorhanden, bleibt zur Normierung vorhanden, wird aber anonymisiert (kann also nicht mehr mit Ihnen in Verbindung gebracht werden).' %}</p>
 <form class="login-form" method="post">
     {{ delete_form.as_p }}
     {% csrf_token %}
