--- a/usergroups/templates/usergroups/edit_group.html
+++ b/usergroups/templates/usergroups/edit_group.html
@@ -6,7 +6,11 @@
 
 {% block content %}
     <h1>{% trans "Bearbeiten von" %} <a href="{{ group.get_absolute_url }}">"{{ group.name }}"</a></h1>
-    <p>{% trans "Gruppe gehört zu" %}: <a href="{{ group.category.get_absolute_url }}">{{ group.category.verbose }}</a></p>
+    <div class="button-like" onclick=openLink("{% url 'usergroups:delete_group' group.id %}")>
+        <img src="{% static 'icons/remove.png' %}">
+        {% trans "Gruppe löschen" %}
+    </div>
+    <p class="info-p">{% trans "Gruppe gehört zu" %}: <a href="{{ group.category.get_absolute_url }}">{{ group.category.verbose }}</a></p>
     <form class="login-form" method="post" enctype="multipart/form-data">
         {{ form.as_p }}
         {% csrf_token %}
@@ -21,8 +25,4 @@
             {% endif %}
         {% endfor %}
     </ul>
-    <div class="button-like" onclick=openLink("{% url 'usergroups:delete_group' group.id %}")>
-        <img src="{% static 'icons/remove.png' %}">
-        {% trans "Gruppe löschen" %}
-    </div>
 {% endblock %}
