--- a/usergroups/templates/usergroups/group_detail.html
+++ b/usergroups/templates/usergroups/group_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     {% if group.image %}
-    <img src="{{ group.image.url }}" class="group-full-image">
+    <img src="{{ group.image.url }}" class="user-photo">
     {% endif %}
     <h1 class="center-container">{{ group.verbose }}</h1>
     <p class="center-container">{{ group.description }}</p>
