--- a/account/templates/account/banner.html
+++ b/account/templates/account/banner.html
@@ -6,11 +6,9 @@
     bottom: 20px;
     left: 15px;
     right: 15px;
-    background: black;
-    border-radius: 10px;
-    padding: 0px 5px 15px 5px;
-    color: white;
-    font-family: "Arial", "Verdana", "Helvectica";
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cookie-banner a {
@@ -19,6 +17,12 @@
 
 .container {
     text-align: center;
+    background: black;
+    border-radius: 10px;
+    padding: 0px 5px 15px 5px;
+    color: white;
+    max-width: 600px;
+    font-family: "Arial", "Verdana", "Helvectica";
 }
 
 </style>
