--- a/account/templates/account/about.html
+++ b/account/templates/account/about.html
@@ -9,6 +9,11 @@
 <div class="info-p" style="margin: 0 5px">
     {% blocktrans %}Hallo!<ul><li>Sie wollen neue Musik hören, wissen aber nicht, welches Genre?</li><li>Sie würden gerne was am Wochenende unternehmen, wissen aber noch nicht, was?</li><li>Sie würden gerne ein Instrument lernen, sind sich aber nicht sicher, welches?</li></ul>Da kann Ihnen diese Seite vielleicht bei helfen! Nach der <a href="/account/register">kostenlosen Registrierung</a> können Sie hier Folgendes machen: {% endblocktrans %}
 </div>
+<br>
+<div class="center-container">
+    <video controls autoplay src="{% static 'about/ad.mp4' %}"></video>
+</div>
+<p style="clear: both"></p>
 <div class="center-container">
 <p style="font-weight: bold;">{% trans "Ermitteln Sie Ihre Persönlichkeit in wenigen Minuten durch einfache Fragen!" %}</p>
 {% if prefix == 'de' %}
